--- a/src/main/resources/templates/blog-add.html
+++ b/src/main/resources/templates/blog-add.html
@@ -21,13 +21,16 @@
 
     </nav>
 </div>
-<div class="container mt-5"></div>
-   <h1>Блог сайта</h1>
-   <div th:each="el : ${post}" class ="alert alert-info mt-2">
-    <h3 th:text="${el.title}"/>
-       <p th:text="${el.anons}"/>
-       <a th:href="'/blog/'+ ${el.id}">Детальнее</a>
-   </div>
+<div class="container mt-5 mb-5">
+    <h1>Добавление статьи</h1>
+  <form action="/blog/add" method="post">
+      <input type="text" name="title" placeholder="Введите название статьи" class="form-control"><br>
+      <input type="text" name="anons" placeholder="Введите анонсы статьи" class="form-control"><br>
+      <textarea type="text" name="full_text" placeholder="Введите полный текст статьи" class="form-control" ></textarea><br>
+      <button type="submit" class="btn btn-success">Добавить статью</button>
+  </form>
+</div>
+
 
 <footer class="text-muted py-5">
     <div class="container">
