--- a/src/main/resources/templates/blog-edit.html
+++ b/src/main/resources/templates/blog-edit.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Блог сайта</title>
+    <title>Редактирование статьи</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
@@ -21,17 +21,18 @@
 
     </nav>
 </div>
-<div class="container mt-5"></div>
-<div th:each="el : ${post}" class ="alert alert-info mt-2">
-    <h1 th:text="${el.title}"/>
-    <p th:text="${el.fullText}"/></p>
-    <p><b>Просмотры:</b> <span th:text="${el.views}"/></p>
-    <a th:href="'/blog/'+ ${el.id} + '/edit'" class="btn btn-warning">Редактировать</a><br><br>
-    <form th:action="'/blog/' + ${el.id} + '/remove'" method="post">
-        <button class="btn btn-warning" type="submit">Удалить</button>
+<div class="container mt-5 mb-5">
+    <h1>Редактирование статьи</h1>
+    <div th:each="el : ${post}">
+    <form method="post">
+        <input type="text" name="title" th:value="${el.title}" placeholder="Введите название статьи" class="form-control"><br>
+        <input type="text"  th:value="${el.anons}"name="anons" placeholder="Введите анонсы статьи" class="form-control"><br>
+        <textarea type="text" name="full_text" placeholder="Введите полный текст статьи" class="form-control"th:text="${el.fullText}"/><br>
+        <button type="submit" class="btn btn-success">Обновить</button>
     </form>
-
+   </div>
 </div>
+
 
 <footer class="text-muted py-5">
     <div class="container">
