--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -19,6 +19,12 @@
     </nav>
 </div>
 
+<div>
+    <form th:action="@{/logout}" method="post">
+        <input type="submit" value="Sign Out"/>
+    </form>
+</div>
+
 <main>
 
     <section class="py-5 text-center container">
