Add Users to database

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,5 +1,6 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
+
 <head>
     <title> BCrypt </title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -16,9 +17,7 @@
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-        </ul>
-
+        <ul class="navbar-nav mr-auto"></ul>
     </div>
 </nav>
 <div class="d-flex flex-column flex-md-row align-items-center pb-3 mb-4 border-bottom">
@@ -58,15 +57,11 @@
 
 <main>
 
-    <section class="py-5 text-center container">
-        <div class="row py-lg-5">
+    <section class="py-1 text-center container">
+        <div class="row py-lg-2">
             <div class="col-lg-6 col-md-8 mx-auto">
                 <h1 class="fw-light">Статьи в процессе добавления...</h1>
                 <p class="lead text-muted">Web-приложение находится в процесе разработки 1.0</p>
-                <p>
-                    <a href="#" class="btn btn-primary my-2">Main call to action</a>
-                    <a href="#" class="btn btn-secondary my-2">Secondary action</a>
-                </p>
             </div>
         </div>
     </section>
